--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/vividandrew/WebPracticalCW2#readme",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.17",
+    "crypto": "^1.0.1",
     "express": "^5.1.0",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
+    "nedb": "^1.8.0",
     "node": "^18.20.8",
     "tailwindcss": "^4.0.17",
     "url": "^0.11.4"
