--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/vividandrew/WebPracticalCW2#readme",
   "dependencies": {
+    "@seald-io/nedb": "^4.1.1",
     "@tailwindcss/cli": "^4.0.17",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
-    "nedb": "^1.8.0",
     "node": "^18.20.8",
     "tailwindcss": "^4.0.17",
     "url": "^0.11.4"
