--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "flowbite-datepicker": "^1.3.2",
     "jsonwebtoken": "^9.0.2",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
