--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ACCESS_TOKEN_SECRET="Random set of string used in generating random tokens"
 ACCESS_TOKEN_LIFE=60
 BUSINESS_NAME="Business name here"
+PORT=3620
